// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsInstanceSectionPropsFactory for Fastpass creates props as expected 1`] = `
Object {
  "deps": Object {
    "tabStopRequirementActionMessageCreator": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "dispatcher": undefined,
      "telemetryFactory": undefined,
      "toggleTabStopRequirementExpand": [Function],
    },
    "tabStopsTestViewController": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "actions": undefined,
      "createNewFailureInstancePanel": [Function],
      "dismissPanel": [Function],
      "editExistingFailureInstance": [Function],
      "updateDescription": [Function],
    },
  },
  "getCollapsibleComponentPropsWithInstance": [Function],
  "headingLevel": 3,
  "results": Array [
    Object {
      "description": "test requirement description 1",
      "id": "keyboard-navigation",
      "instances": Array [
        Object {
          "description": "test desc 1",
          "id": "test-id-1",
        },
        Object {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 1",
    },
    Object {
      "description": "test requirement description 2",
      "id": "keyboard-traps",
      "instances": Array [
        Object {
          "description": "test desc 3",
          "id": "test-id-3",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 2",
    },
  ],
  "tabStopRequirementState": Object {
    "keyboard-navigation": Object {
      "instances": Array [
        Object {
          "description": "test desc 1",
          "id": "test-id-1",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
    "keyboard-traps": Object {
      "instances": Array [
        Object {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
  },
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Fastpass creates props as expected 2`] = `
Object {
  "buttonAriaLabel": "label",
  "containerAutomationId": "tab-stops-results-group",
  "containerClassName": "collapsibleRequirementDetailsGroup",
  "content": <TabStopsRequirementInstancesCollapsibleContent
    instances={
      Array [
        Object {
          "description": "test desc 1",
          "id": "test-id-1",
        },
        Object {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ]
    }
    onEditButtonClicked={[Function]}
    onRemoveButtonClicked={[Function]}
    requirementId="keyboard-navigation"
  />,
  "deps": Object {
    "tabStopRequirementActionMessageCreator": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "dispatcher": undefined,
      "telemetryFactory": undefined,
      "toggleTabStopRequirementExpand": [Function],
    },
    "tabStopsTestViewController": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "actions": undefined,
      "createNewFailureInstancePanel": [Function],
      "dismissPanel": [Function],
      "editExistingFailureInstance": [Function],
      "updateDescription": [Function],
    },
  },
  "header": <TabStopsMinimalRequirementHeader
    deps={
      Object {
        "tabStopRequirementActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "telemetryFactory": undefined,
          "toggleTabStopRequirementExpand": [Function],
        },
        "tabStopsTestViewController": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "actions": undefined,
          "createNewFailureInstancePanel": [Function],
          "dismissPanel": [Function],
          "editExistingFailureInstance": [Function],
          "updateDescription": [Function],
        },
      }
    }
    requirement={
      Object {
        "description": "test requirement description 1",
        "id": "keyboard-navigation",
        "instances": Array [
          Object {
            "description": "test desc 1",
            "id": "test-id-1",
          },
          Object {
            "description": "test desc 2",
            "id": "test-id-2",
          },
        ],
        "isExpanded": false,
        "name": "test requirement name 1",
      }
    }
  />,
  "headingLevel": 3,
  "id": "keyboard-navigation",
  "isExpanded": false,
  "key": "summary-details-1",
  "onExpandToggle": [Function],
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Report creates props as expected 1`] = `
Object {
  "deps": Object {
    "tabStopRequirementActionMessageCreator": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "dispatcher": undefined,
      "telemetryFactory": undefined,
      "toggleTabStopRequirementExpand": [Function],
    },
    "tabStopsTestViewController": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "actions": undefined,
      "createNewFailureInstancePanel": [Function],
      "dismissPanel": [Function],
      "editExistingFailureInstance": [Function],
      "updateDescription": [Function],
    },
  },
  "getCollapsibleComponentPropsWithInstance": [Function],
  "getCollapsibleComponentPropsWithoutInstance": [Function],
  "headingLevel": 3,
  "results": Array [
    Object {
      "description": "test requirement description 1",
      "id": "keyboard-navigation",
      "instances": Array [
        Object {
          "description": "test desc 1",
          "id": "test-id-1",
        },
        Object {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 1",
    },
    Object {
      "description": "test requirement description 2",
      "id": "keyboard-traps",
      "instances": Array [
        Object {
          "description": "test desc 3",
          "id": "test-id-3",
        },
      ],
      "isExpanded": false,
      "name": "test requirement name 2",
    },
  ],
  "tabStopRequirementState": Object {
    "keyboard-navigation": Object {
      "instances": Array [
        Object {
          "description": "test desc 1",
          "id": "test-id-1",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
    "keyboard-traps": Object {
      "instances": Array [
        Object {
          "description": "test desc 2",
          "id": "test-id-2",
        },
      ],
      "isExpanded": false,
      "status": "fail",
    },
  },
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Report creates props as expected 2`] = `
Object {
  "buttonAriaLabel": "label",
  "containerAutomationId": "tab-stops-results-group",
  "containerClassName": "collapsibleRequirementDetailsGroup",
  "content": <ReportInstanceList
    instances={
      Array [
        Object {
          "props": Array [
            Object {
              "key": "Comment",
              "value": "test desc 1",
            },
            Object {
              "key": "Comment",
              "value": "test desc 2",
            },
          ],
        },
      ]
    }
    requirementId="keyboard-navigation"
  />,
  "deps": Object {
    "tabStopRequirementActionMessageCreator": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "dispatcher": undefined,
      "telemetryFactory": undefined,
      "toggleTabStopRequirementExpand": [Function],
    },
    "tabStopsTestViewController": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "actions": undefined,
      "createNewFailureInstancePanel": [Function],
      "dismissPanel": [Function],
      "editExistingFailureInstance": [Function],
      "updateDescription": [Function],
    },
  },
  "header": <TabStopsMinimalRequirementHeader
    deps={
      Object {
        "tabStopRequirementActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "telemetryFactory": undefined,
          "toggleTabStopRequirementExpand": [Function],
        },
        "tabStopsTestViewController": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "actions": undefined,
          "createNewFailureInstancePanel": [Function],
          "dismissPanel": [Function],
          "editExistingFailureInstance": [Function],
          "updateDescription": [Function],
        },
      }
    }
    requirement={
      Object {
        "description": "test requirement description 1",
        "id": "keyboard-navigation",
        "instances": Array [
          Object {
            "description": "test desc 1",
            "id": "test-id-1",
          },
          Object {
            "description": "test desc 2",
            "id": "test-id-2",
          },
        ],
        "isExpanded": false,
        "name": "test requirement name 1",
      }
    }
  />,
  "headingLevel": 3,
  "id": "keyboard-navigation",
  "isExpanded": false,
  "key": "summary-details-1",
  "onExpandToggle": [Function],
}
`;

exports[`TabStopsInstanceSectionPropsFactory for Report creates props as expected 3`] = `
Object {
  "buttonAriaLabel": "label",
  "containerAutomationId": "tab-stops-results-group",
  "containerClassName": "collapsibleRequirementDetailsGroup",
  "content": <span
    className="noInstances"
  >
    This requirement has failed but no comment has been added
  </span>,
  "deps": Object {
    "tabStopRequirementActionMessageCreator": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "dispatcher": undefined,
      "telemetryFactory": undefined,
      "toggleTabStopRequirementExpand": [Function],
    },
    "tabStopsTestViewController": proxy {
      "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
      "actions": undefined,
      "createNewFailureInstancePanel": [Function],
      "dismissPanel": [Function],
      "editExistingFailureInstance": [Function],
      "updateDescription": [Function],
    },
  },
  "header": <TabStopsMinimalRequirementHeader
    deps={
      Object {
        "tabStopRequirementActionMessageCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "dispatcher": undefined,
          "telemetryFactory": undefined,
          "toggleTabStopRequirementExpand": [Function],
        },
        "tabStopsTestViewController": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "actions": undefined,
          "createNewFailureInstancePanel": [Function],
          "dismissPanel": [Function],
          "editExistingFailureInstance": [Function],
          "updateDescription": [Function],
        },
      }
    }
    requirement={
      Object {
        "description": "test requirement description 1",
        "id": "keyboard-navigation",
        "instances": Array [
          Object {
            "description": "test desc 1",
            "id": "test-id-1",
          },
          Object {
            "description": "test desc 2",
            "id": "test-id-2",
          },
        ],
        "isExpanded": false,
        "name": "test requirement name 1",
      }
    }
  />,
  "headingLevel": 3,
  "id": "keyboard-navigation",
  "isExpanded": false,
  "key": "summary-details-1",
  "onExpandToggle": [Function],
}
`;
